# Similitud

./: CMakeLists.txt  README.md  preproc.c  query_maker.c  similitud.h  test_script.sh
diccionarios/: dic1.txt  dic90.txt
indices/: 90_1.txt  90_16.txt  90_4.txt  90_8.txt
pivotes/: pivote1.txt  pivote16.txt  pivote32.txt  pivote4.txt  pivote8.txt
querys/: consulta.txt  dic10.txt  q.txt
resultados/: caballo_4txt  evaluaciones.gp  pivot_16_rango_1.txt  pivot_16_rango_2.txt  pivot_16_rango_3.txt  pivot_16_rango_4.txt  pivot_1_rango_1.txt  pivot_1_rango_2.txt  pivot_1_rango_3.txt  pivot_1_rango_4.txt  pivot_32_rango_1.txt  pivot_32_rango_2.txt  pivot_32_rango_3.txt  pivot_32_rango_4.txt  pivot_4_rango_1.txt  pivot_4_rango_2.txt  pivot_4_rango_3.txt  pivot_4_rango_4.txt  pivot_8_rango_1.txt  pivot_8_rango_2.txt  pivot_8_rango_3.txt  pivot_8_rango_4.txt  rango1.txt  rango2.txt  rango3.txt  rango4.txt  soluciones.gp  test90.txt  test90_32.txt  tiempo.gp
